# lanedetect

./: README.md
lanedetect_mnn/: CMakeLists.txt  main.cpp  readme.md
lanedetect_mnn/include/: lane.hpp
lanedetect_mnn/lib/: libMNN.dylib
lanedetect_mnn/src/: lane.cpp
lanedetect_mnn_android/: main.cpp  readme.md
lanedetect_mnn_android/include/: lane.hpp
lanedetect_mnn_android/models/: mlsd_no_max_sigmoid.mnn  mlsd_no_max_sigmoid.onnx
lanedetect_mnn_android/src/: lane.cpp
